[package]
name = "backend"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework
tokio = {version="^1.0.0", features = ["full"]}
axum = {version="^0.6.0", features = ["headers"]}
tower-http = {version = "0.4", features = ["full"]}

# database
sqlx = {version = "0.7", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono"]} 
sqlx-core = "0.7"
sqlx-mysql = "0.7"

# serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# url = {version = "2", features = ["serde"]}
percent-encoding = "2.1"
