[package]
name = "backend"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework
tokio = {version="^1.0.0", features = ["full"]}
hyper = { version = "^1.0", features = ["full"] }
axum = {version="^0.6.0", features = ["headers", "tracing", "macros"]}
tower = {version="0.4", features = ["full"]}
tower-http = {version = "0.4", features = ["full"]}

askama = { version = "^0.12.0", features = ["with-axum"] }
askama_axum = "^0.3.0"

# database
sqlx = {version = "0.7", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono"]} 
sqlx-core = "0.7"
sqlx-mysql = "0.7"

# serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# url = {version = "2", features = ["serde"]}
percent-encoding = "2.1" # url encode

# log
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

# development tools
# listenfd = "1.0"
# axum_macros = {version="^0.3.8"} # debug
