[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="^1.0.0", features = ["full"]}
axum = "^0.6.0"
tower-http = {version = "0.4", features=["full"]}
sqlx = {version = "0.7", features = ["runtime-tokio-rustls", "mysql", "macros", "time"]} 
